[package]
name = "axum-user-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-macros = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["trace", "cors"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
tracing-subscriber = "0.3"